--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -89,7 +89,6 @@ This output reveals that the dataset contains `r nrow(diamonds)` observations an
 
 Before cleaning or transforming these variables, it is important to understand how they are represented and what type of information they encode. Different feature types require different preparation strategies. In the next section, we examine how the variables in the `diamonds` dataset are structured and classified.
 
-
 ## Feature Types and Their Role in Data Preparation {#sec-ch3-feature-types}
 
 Before detecting outliers or encoding variables, it is essential to understand the types of features present in a dataset. Feature type determines which preprocessing steps are appropriate, how summaries should be interpreted, and how variables enter statistical or machine learning models. Figure [-@fig-ch3-feature-type] provides an overview of the feature types most commonly encountered in data science.
@@ -190,11 +189,11 @@ Such values may reflect data entry errors or implausible measurements rather tha
 
 Boxplots and histograms provide effective first impressions of potential outliers, but they are not the only visual tools available. Depending on the analytical context, additional visualizations can offer complementary perspectives on extreme or irregular observations.
 
-- *Scatter plots* are particularly useful for examining relationships between variables and identifying observations that deviate from overall trends, especially in bivariate or multivariate settings. For example, plotting `y` against `price` can reveal whether extreme diamond widths are associated with unusually high or low prices, a pattern we revisit later in this chapter.
+-   *Scatter plots* are particularly useful for examining relationships between variables and identifying observations that deviate from overall trends, especially in bivariate or multivariate settings. For example, plotting `y` against `price` can reveal whether extreme diamond widths are associated with unusually high or low prices, a pattern we revisit later in this chapter.
 
-- *Violin plots* combine a summary of central tendency with a smoothed density estimate, allowing extreme values to be interpreted in the context of the full distribution rather than in isolation.
+-   *Violin plots* combine a summary of central tendency with a smoothed density estimate, allowing extreme values to be interpreted in the context of the full distribution rather than in isolation.
 
-- *Density plots* provide a continuous, smoothed view of the distribution, making features such as long tails, skewness, or multiple modes easier to detect than with histograms alone.
+-   *Density plots* provide a continuous, smoothed view of the distribution, making features such as long tails, skewness, or multiple modes easier to detect than with histograms alone.
 
 These visual tools are most valuable during the early stages of analysis, when the goal is to screen for irregular patterns and develop intuition about the data. As the number of variables increases, however, visual inspection becomes less scalable, and formal statistical techniques are often required to support systematic outlier detection.
 
@@ -210,19 +209,19 @@ Once outliers have been identified, either visually or through statistical crite
 
 Several practical strategies are commonly used, each with its own trade-offs:
 
-- *Retain the outlier* when it represents a valid observation that may carry important information. In fraud detection, for example, extreme values are often precisely the cases of interest. Similarly, in the `adult` income dataset examined later in this chapter, unusually large values of `capital.gain` may correspond to genuinely high-income individuals. Removing such observations can reduce predictive power or obscure meaningful variation.
+-   *Retain the outlier* when it represents a valid observation that may carry important information. In fraud detection, for example, extreme values are often precisely the cases of interest. Similarly, in the `adult` income dataset examined later in this chapter, unusually large values of `capital.gain` may correspond to genuinely high-income individuals. Removing such observations can reduce predictive power or obscure meaningful variation.
 
-- *Replace the outlier with a missing value* when there is strong evidence that it is erroneous. Implausible measurements, such as negative carat values or clearly duplicated records, are often best treated as missing. Replacing them with `NA` allows for flexible downstream handling, including imputation strategies discussed later in this chapter.
+-   *Replace the outlier with a missing value* when there is strong evidence that it is erroneous. Implausible measurements, such as negative carat values or clearly duplicated records, are often best treated as missing. Replacing them with `NA` allows for flexible downstream handling, including imputation strategies discussed later in this chapter.
 
-- *Flag and preserve the outlier* by creating an indicator variable (for example, `is_outlier`). This approach retains potentially informative observations while allowing models to account explicitly for their special status.
+-   *Flag and preserve the outlier* by creating an indicator variable (for example, `is_outlier`). This approach retains potentially informative observations while allowing models to account explicitly for their special status.
 
-- *Apply data transformations*, such as logarithmic or square-root transformations, to reduce the influence of extreme values while preserving relative differences. This strategy is particularly useful for highly skewed numerical variables.
+-   *Apply data transformations*, such as logarithmic or square-root transformations, to reduce the influence of extreme values while preserving relative differences. This strategy is particularly useful for highly skewed numerical variables.
 
-- *Use modeling techniques that are robust to outliers*. Methods such as decision trees, random forests, and median-based estimators are less sensitive to extreme values than models that rely heavily on means or squared errors.
+-   *Use modeling techniques that are robust to outliers*. Methods such as decision trees, random forests, and median-based estimators are less sensitive to extreme values than models that rely heavily on means or squared errors.
 
-- *Apply winsorization*, which caps extreme values at specified percentiles (for example, the 1st and 99th percentiles). This approach limits the influence of outliers while retaining all observations and can be effective for models that are sensitive to extreme values, such as linear regression.
+-   *Apply winsorization*, which caps extreme values at specified percentiles (for example, the 1st and 99th percentiles). This approach limits the influence of outliers while retaining all observations and can be effective for models that are sensitive to extreme values, such as linear regression.
 
-- *Remove the outlier* only when the value is clearly invalid, cannot be corrected or reasonably imputed, and would otherwise compromise the integrity of the analysis. This option should be considered a last resort rather than a default choice.
+-   *Remove the outlier* only when the value is clearly invalid, cannot be corrected or reasonably imputed, and would otherwise compromise the integrity of the analysis. This option should be considered a last resort rather than a default choice.
 
 In practice, a cautious and transparent approach is essential. Automatically removing outliers may simplify analysis but risks discarding rare yet meaningful information. Thoughtful handling, guided by domain knowledge and analytical objectives, helps ensure that data preparation supports reliable inference and robust modeling.
 
@@ -262,9 +261,9 @@ A common but risky response to missing data is to remove incomplete observations
 
 Broadly, two main approaches are used to handle missing data:
 
-- *Imputation*, which replaces missing values with plausible estimates based on observed data, allowing all records to be retained.
+-   *Imputation*, which replaces missing values with plausible estimates based on observed data, allowing all records to be retained.
 
-- *Removal*, which excludes rows or variables containing missing values and is typically reserved for cases where missingness is extensive or uninformative.
+-   *Removal*, which excludes rows or variables containing missing values and is typically reserved for cases where missingness is extensive or uninformative.
 
 In the sections that follow, we examine how to identify missing values in practice and introduce imputation techniques that support more complete, reliable, and interpretable analyses.
 
@@ -465,7 +464,6 @@ gg_miss_var(adult, show_pct = TRUE)
 
 The resulting plot confirms that missing values occur only in three categorical features: `workclass` with `r sum(is.na(adult$workclass))` entries, `occupation` with `r sum(is.na(adult$occupation))` entries, and `native_country` with `r sum(is.na(adult$native_country))` entries. Rather than removing incomplete observations, which would lead to unnecessary information loss, we choose to impute these missing values. Because all three variables are categorical and preserving the empirical distribution of categories is desirable at this stage, we apply random sampling imputation using the `impute()` function from the **Hmisc** package:
 
-
 ```{r}
 library(Hmisc)
 
@@ -562,7 +560,7 @@ ggplot(data = adult) +
      ggtitle("Histogram of Capital Loss")
 ```
 
-Both plots confirm the strong positive skew. Most individuals report no capital loss, while a small number exhibit substantially higher values, with visible concentrations around 2,000 and 4,000. To better understand the distribution among individuals who do report capital loss, we restrict attention to observations for which `capital_loss > 0`:
+Both plots confirm the strong positive skew. Most individuals report no capital loss, while a small number exhibit substantially higher values, with visible concentrations around 2,000. To better understand the distribution among individuals who do report capital loss, we restrict attention to observations for which `capital_loss > 0`:
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -580,7 +578,7 @@ ggplot(data = subset_adult) +
      ggtitle("Histogram of Nonzero Capital Loss")
 ```
 
-Within this subset, most values lie below 500, with a small number exceeding 4,000. Importantly, the distribution of these larger values appears relatively smooth and approximately symmetric, providing no indication of data entry errors or anomalous observations. Instead, these values plausibly reflect genuine financial losses incurred by a small group of individuals.
+Within this subset, most values lie below 1,000 and 3,000. Importantly, the distribution of these larger values appears relatively smooth and approximately symmetric, providing no indication of data entry errors or anomalous observations. Instead, these values plausibly reflect genuine financial losses incurred by a small group of individuals.
 
 Based on this evidence, we retain the extreme values in `capital_loss`. Removing them would risk discarding meaningful information about individuals with substantial financial losses. If these values later prove influential during modeling, alternative strategies may be considered, such as applying a log or square-root transformation, creating a binary indicator for the presence of capital loss, or using winsorization to limit the influence of extreme observations.
 
