--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -199,7 +199,7 @@ data(churn)
 str(churn)
 ```
 
-The dataset is stored as a `data.frame` with `r nrow(churn)` observations and `r ncol(churn)` features. The predictors consist of both numerical and categorical features that describe customer demographics, spending behavior, credit management, and engagement with the bank. Eight features are categorical (`gender`, `education`, `marital`, `income`, `card_category`, `churn`, and two grouping identifiers), while the remaining features are numerical. The categorical features represent demographic or qualitative groupings, and the numerical features capture continuous measures such as credit limits, transaction amounts, and utilisation ratios. This distinction guides the choice of summary and visualization techniques used later in the chapter. A structured overview of the features is provided below:
+The dataset is stored as a `data.frame` with `r nrow(churn)` observations and `r ncol(churn)` features. The predictors consist of both numerical and categorical features that describe customer demographics, spending behavior, credit management, and engagement with the bank. Eight features are categorical (`gender`, `education`, `marital`, `income`, `card_category`, `churn`, and two grouping identifiers), while the remaining features are numerical. The categorical features represent demographic or qualitative groupings, and the numerical features capture continuous measures such as credit limits, transaction amounts, and utilization ratios. This distinction guides the choice of summary and visualization techniques used later in the chapter. A structured overview of the features is provided below:
 
 -   `customer_ID`: Unique identifier for each account holder.
 -   `age`: Age of the customer, in years.
@@ -220,7 +220,7 @@ The dataset is stored as a `data.frame` with `r nrow(churn)` observations and `r
 -   `transaction_count_12`: Total number of transactions in the past 12 months.
 -   `ratio_amount_Q4_Q1`: Ratio of total transaction amount in the fourth quarter to that in the first quarter.
 -   `ratio_count_Q4_Q1`: Ratio of total transaction count in the fourth quarter to that in the first quarter.
--   `utilization_ratio`: Credit utilisation ratio, defined as `revolving_balance / credit_limit`.
+-   `utilization_ratio`: Credit utilization ratio, defined as `revolving_balance / credit_limit`.
 -   `churn`: Whether the account was closed ("yes") or remained active ("no").
 
 A first quantitative impression of the dataset can be obtained with:
@@ -233,7 +233,7 @@ The summary statistics reveal several broad patterns:
 
 -   *Demographics and tenure:* Customers are primarily middle-aged, with an average age of about 46 years, and have held their accounts for approximately three years.
 
--   *Credit behavior:* Credit limits vary widely around an average of roughly 8,600 dollars. Available credit closely mirrors the credit limit, and utilisation ratios range from very low to very high, indicating a mix of conservative and heavy users.
+-   *Credit behavior:* Credit limits vary widely around an average of roughly 8,600 dollars. Available credit closely mirrors the credit limit, and utilization ratios range from very low to very high, indicating a mix of conservative and heavy users.
 
 -   *Transaction activity:* Customers complete about 65 transactions per year on average, with total annual spending near 4,400 dollars. The upper quartile contains high spenders whose behavior may influence churn.
 
@@ -347,7 +347,7 @@ addmargins(table(churn$churn, churn$gender,
 
 The table confirms the visual impression that the proportion of female customers who churn is marginally higher than that of male customers. At this stage, the analysis remains descriptive. Determining whether such a difference is statistically significant requires formal inference, which is introduced in Section [-@sec-ch5-two-sample-z-test].
 
-From an exploratory perspective, this finding suggests that gender alone is not a strong differentiating feature for churn behavior. In practice, larger and more informative variation is typically associated with behavioral and financial indicators such as transaction activity, credit utilisation, and customer service interactions. These features therefore tend to carry greater predictive value in churn modeling contexts.
+From an exploratory perspective, this finding suggests that gender alone is not a strong differentiating feature for churn behavior. In practice, larger and more informative variation is typically associated with behavioral and financial indicators such as transaction activity, credit utilization, and customer service interactions. These features therefore tend to carry greater predictive value in churn modeling contexts.
 
 > *Practice:* Compute the churn rate separately for male and female customers using the `churn` dataset. Then create your own bar plot and compare it with the figures above. Based on the observed proportions, would you expect the difference in churn rates to be statistically significant? This question is revisited formally in Chapter [-@sec-ch5-two-sample-z-test], where the test for two proportions is introduced.
 
@@ -442,7 +442,7 @@ addmargins(table(churn$churn, churn$marital,
 
 The contingency table supports the visual impression. Although single customers exhibit marginally higher churn rates, the overall association between marital status and churn appears limited. Small behavioral differences may exist across household types, but marital status is unlikely to be a strong predictor of churn on its own.
 
-From an analytical standpoint, this feature offers only minor explanatory value. Later sections will show that behavioral and financial indicators—including spending activity, utilisation ratio, and customer-service interactions—provide more substantial insight into churn risk. Because both `marital` and `churn` are categorical variables, the Chi-square test introduced in Section [-@sec-ch5-chi-square-test] will formally assess whether the observed differences are statistically meaningful.
+From an analytical standpoint, this feature offers only minor explanatory value. Later sections will show that behavioral and financial indicators—including spending activity, utilization ratio, and customer-service interactions—provide more substantial insight into churn risk. Because both `marital` and `churn` are categorical variables, the Chi-square test introduced in Section [-@sec-ch5-chi-square-test] will formally assess whether the observed differences are statistically meaningful.
 
 > *Practice:* Examine whether `education` is associated with churn. Create bar plots for counts and proportions, inspect the contingency table, and consider whether any observed differences appear meaningful in practice. This exercise reinforces the workflow used for exploring categorical features.
 
@@ -687,12 +687,12 @@ A similar relationship appears between `utilization_ratio`, `revolving_balance`,
 
 ggplot(data = churn) +
     geom_point(aes(x = credit_limit, y = utilization_ratio), size = 0.1) +
-    labs(x = "Credit Limit", y = "Utilization Ratio")
+    labs(x = "Credit Limit", y = "utilization Ratio")
 
 ggplot(data = churn) +
     geom_point(aes(x = revolving_balance/credit_limit, 
                    y = utilization_ratio), size = 0.1) +
-    labs(x = "Revolving Balance / Credit Limit", y = "Utilization Ratio")
+    labs(x = "Revolving Balance / Credit Limit", y = "utilization Ratio")
 ```
 
 > *Practice:* Create a three-dimensional scatter plot using `credit_limit`, `revolving_balance`, and `utilization_ratio`. Because these features are mathematically linked, the points should lie close to a plane. Use **plotly** to explore the structure interactively. Rotate the plot and examine how the features relate. Does the three-dimensional view make the redundancy among these features more visually apparent?
@@ -803,7 +803,7 @@ Credit-related features add further insight. Customers with lower credit limits 
 
 Multivariate exploration deepens these insights. Joint analysis of transaction amount and transaction count shows that customers who both spend little and use their card infrequently have elevated churn rates. This relationship does not emerge as clearly from the individual features and demonstrates the importance of considering interactions. Combining card category with transaction amount reveals that higher-tier cardholders tend to spend more and churn less, while blue cardholders represent a more heterogeneous group that includes many low-activity accounts. Analysis across age groups shows that younger customers generally spend more and complete more transactions but experience slightly higher churn rates than older customers with comparable activity levels. This aligns with broader evidence that younger customers are more willing to switch providers.
 
-The correlation analysis identifies a few redundant features. Available credit is determined by subtracting revolving balance from the credit limit, and the utilisation ratio is calculated from revolving balance and credit limit. These relationships indicate that the derived features do not contain additional information beyond their components. For Modeling, it is often preferable to retain either the raw components or the ratio, depending on the analytical objective, rather than all three. Removing such redundant variables simplifies the feature set and reduces the risk of multicollinearity.
+The correlation analysis identifies a few redundant features. Available credit is determined by subtracting revolving balance from the credit limit, and the utilization ratio is calculated from revolving balance and credit limit. These relationships indicate that the derived features do not contain additional information beyond their components. For Modeling, it is often preferable to retain either the raw components or the ratio, depending on the analytical objective, rather than all three. Removing such redundant variables simplifies the feature set and reduces the risk of multicollinearity.
 
 Overall, the exploratory analysis shows that churn is more closely associated with behavioral and financial indicators, such as spending activity, credit usage, and service interactions, than with demographic variables alone. Together, these findings provide a clear empirical foundation for the statistical inference and predictive Modeling in the chapters that follow. Several of the patterns identified here will be examined formally in Chapter [-@sec-ch5-statistics] using hypothesis tests to assess whether these observed differences reflect wider population-level effects.
 
@@ -811,13 +811,13 @@ Overall, the exploratory analysis shows that churn is more closely associated wi
 
 This chapter introduced exploratory data analysis as a practical and systematic step in the data science workflow. Using the `churn` dataset, we demonstrated how graphical and numerical techniques can be used to understand data structure, detect data quality issues, and develop initial hypotheses about customer behavior that guide subsequent analysis.
 
-The analysis began with an overview of the dataset and an initial preparation step, during which missing values encoded as `"unknown"` were identified and resolved. Ensuring that features were clean and correctly typed provided a reliable foundation for exploration. We then examined categorical variables such as gender, education, marital status, income, and card type to characterise customer profiles, followed by numerical features related to credit limits, transaction activity, and utilisation.
+The analysis began with an overview of the dataset and an initial preparation step, during which missing values encoded as `"unknown"` were identified and resolved. Ensuring that features were clean and correctly typed provided a reliable foundation for exploration. We then examined categorical variables such as gender, education, marital status, income, and card type to characterise customer profiles, followed by numerical features related to credit limits, transaction activity, and utilization.
 
-Several consistent relationships emerged from this exploratory analysis. Customers with smaller credit limits, higher utilisation ratios, or frequent customer service interactions were more likely to churn. In contrast, customers with higher transaction amounts and lower utilisation tended to remain active. These patterns illustrate how EDA can surface potentially important explanatory features before any formal Modeling is undertaken.
+Several consistent relationships emerged from this exploratory analysis. Customers with smaller credit limits, higher utilization ratios, or frequent customer service interactions were more likely to churn. In contrast, customers with higher transaction amounts and lower utilization tended to remain active. These patterns illustrate how EDA can surface potentially important explanatory features before any formal Modeling is undertaken.
 
 Multivariate exploration further revealed that churn behavior is shaped by combinations of features rather than isolated characteristics. Joint patterns in transaction amount and transaction count, associations between card category and spending, and links between age and financial activity showed how behavioral, financial, and demographic factors interact to influence customer retention.
 
-The chapter also highlighted the importance of identifying redundant features. For example, available credit and utilisation ratio were found to be deterministically related to other variables in the dataset. recognizing such redundancy simplifies later Modeling steps and improves interpretability.
+The chapter also highlighted the importance of identifying redundant features. For example, available credit and utilization ratio were found to be deterministically related to other variables in the dataset. recognizing such redundancy simplifies later Modeling steps and improves interpretability.
 
 Taken together, the examples in this chapter illustrate three guiding principles for effective exploratory analysis. First, graphical and numerical summaries are most informative when used together. Second, careful attention to data quality, including missing values and redundant features, is essential for reliable conclusions. Third, exploratory analysis is not merely descriptive. It provides direction for statistical inference and predictive Modeling by revealing patterns that merit further investigation.
 
