--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -416,7 +416,7 @@ The main variables are summarized below:
 -   `workclass`: employment type (categorical, 6 levels);
 -   `demogweight`: census weighting factor (numerical);
 -   `education`: highest educational attainment (categorical, 16 levels);
--   `education_num`: years of education (numerical);
+-   `education_num`: an ordinal encoding of the `education` feature (numerical);
 -   `marital_status`: marital status (categorical, 5 levels);
 -   `occupation`: job type (categorical, 15 levels);
 -   `relationship`: household role (categorical, 6 levels);
