--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -440,12 +440,12 @@ To illustrate the effect of scaling, Figure below compares the distribution of t
 ggplot(train_set) +
   geom_histogram(aes(x = age), bins = 20) +
   labs(x = "Age (years)", y = "Count",
-       title = "Before Min–Max Scaling") 
+       title = "Before Min-Max Scaling") 
 
 ggplot(train_scaled) +
   geom_histogram(aes(x = age), bins = 20) +
-  labs(x = "Scaled Age [0–1]", y = "Count",
-       title = "After Min–Max Scaling") 
+  labs(x = "Scaled Age [0, 1]", y = "Count",
+       title = "After Min-Max Scaling") 
 ```
 
 The left panel shows the original distribution of `age` in the training set, while the right panel shows the same variable after min–max scaling. The transformation preserves the shape of the distribution while standardizing its range.
