--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -336,11 +336,11 @@ To illustrate the effect of scaling, we compare the distribution of the `sodium`
 
 ggplot(cereal) +
     geom_histogram(aes(x = sodium)) +
-    labs(x = "Sodium (mg)", y = "Count", title = "Before Min–Max Scaling")
+    labs(x = "Sodium (mg)", y = "Count", title = "Before Min-Max Scaling")
 
 ggplot(cereal_mm) +
     geom_histogram(aes(x = sodium)) + 
-    labs(x = "Scaled Sodium [0–1]", y = "Count", title = "After Min–Max Scaling")
+    labs(x = "Scaled Sodium [0, 1]", y = "Count", title = "After Min-Max Scaling")
 ```
 
 As shown in the histograms, scaling maps sodium values to the $[0, 1]$ range, preventing variables with larger units from disproportionately influencing distance calculations. With the data cleaned, imputed, and scaled, we are now prepared to apply K-means clustering. The next step is to determine how many clusters should be used.
