--- a/6-Setup-data.qmd
+++ b/6-Setup-data.qmd
@@ -385,11 +385,11 @@ To illustrate min–max scaling, consider the variable `age` in the `churn` data
 
 ggplot(data = churn) +
   geom_histogram(aes(x = age), bins = 15) +
-  ggtitle("Before Min–Max Scaling")
+  ggtitle("Before Min-Max Scaling")
 
 ggplot(data = churn) +
   geom_histogram(aes(x = minmax(age)), bins = 15) +
-  ggtitle("After Min–Max Scaling")
+  ggtitle("After Min-Max Scaling")
 ```
 
 The left panel shows the raw distribution of `age`, while the right panel displays the scaled version. After transformation, all values fall within the $[0, 1]$ range, making this feature numerically comparable to others—a crucial property when modeling techniques depend on distance or gradient magnitude.
