--- a/packages.bib
+++ b/packages.bib
@@ -23,6 +23,14 @@
   url = {https://topepo.github.io/C5.0/},
 }
 
+@Manual{R-downlit,
+  title = {downlit: Syntax Highlighting and Automatic Linking},
+  author = {Hadley Wickham},
+  year = {2025},
+  note = {R package version 0.4.5},
+  url = {https://downlit.r-lib.org/},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
@@ -265,6 +273,14 @@ Regression},
   year = {2025},
   note = {R package version 1.3.2},
   url = {https://tidyr.tidyverse.org},
+}
+
+@Manual{R-xml2,
+  title = {xml2: Parse XML},
+  author = {Hadley Wickham and Jim Hester and Jeroen Ooms},
+  year = {2026},
+  note = {R package version 1.5.2},
+  url = {https://xml2.r-lib.org},
 }
 
 @Book{bookdown2016,
